# DIM0549-grafos-works

./: .clang-format  .gitignore  AUTHOR.md  CMakeLists.txt  README.md  configure.sh  main.cpp
data/docs/: DIGRAFO1.txt  DIGRAFO2.txt  DIGRAFO_0.txt  teste.txt
data/docs/unit-01/: DIGRAFO3.txt  DIGRAFO_0.txt  GRAFO_0.txt
data/docs/unit-02/: kruskal.txt  kruskal2.txt
include/: digrafo.hpp  grafos.hpp  grafos.tpp  grafos_adjacency.hpp  grafos_list.hpp
include/core/: grafos.hpp  grafos.tpp
include/parser/: CreateParser.hpp  CreateParser.tpp  GraphParser.hpp  TxtParser.hpp  TxtParser.tpp
src/: digrafo.cpp  grafos_adjacency.cpp  grafos_list.cpp
